hphp/hack/test/typecheck/class_level_where_clauses/this_as/protected_static_member_02.php.exp
File "protected_static_member_02.php", line 29, characters 11-12:
No static method `me` in `Tw` (Typing[4090])
  File "protected_static_member_02.php", line 27, characters 19-21:
  Did you mean instance method `foo` instead?
  File "protected_static_member_02.php", line 26, characters 7-8:
  Declaration of `Tw` is here
File "protected_static_member_02.php", line 38, characters 11-12:
No static method `me` in `Tw2` (Typing[4090])
  File "protected_static_member_02.php", line 21, characters 29-38:
  Did you mean `accessible` instead?
  File "protected_static_member_02.php", line 33, characters 7-9:
  Declaration of `Tw2` is here
File "protected_static_member_02.php", line 29, characters 11-12:
You cannot access this member (Typing[4112])
  File "protected_static_member_02.php", line 20, characters 27-28:
  This member is private
